--- a/PIRESQuestions/PIRESQuestions/Views/Answer/Reply.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Answer/Reply.cshtml
@@ -17,7 +17,7 @@
             </fieldset>
         }
     </div>
-    <a asp-controller="Answer" asp-action="Reply" asp-route-formViewMode=@Model type="submit">Répondre  </a>
+    <a asp-controller="Answer" asp-action="Reply" asp-route-formViewModel=@Model type="submit">Répondre  </a>
     <button type="submit"class="btn btn-primary">Envoyer la réponse</button>
 </form>
 
