--- a/PIRESQuestions/PIRESQuestions/Views/Shared/_Layout.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Shared/_Layout.cshtml
@@ -23,22 +23,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Dashboard" asp-action="Index" asp-route-userId="@TempData["UserId"]">Dashboard</a>
+                            </li>
+                        }                    
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="DataDashboard" asp-action="Index">Data-Dashboard</a>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Gender" asp-action="Index">Gender</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Country" asp-action="Index">Country</a>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Question" asp-action="CreateQuestion">Créer Question</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Choice" asp-action="CreateChoice">Créer Choix</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Question" asp-action="Index">Questions</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Form" asp-action="Index">Form</a>
