--- a/PIRESQuestions/PIRESQuestions/Views/Form/Detail.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Form/Detail.cshtml
@@ -14,11 +14,11 @@
         $('#formCreateQuestion').submit(function (e) {
             var listChoices = [];
 
-            // Parcourez toutes les cases à cocher cochées
+            // Parcours toutes les cases à cocher cochées
             $('.form-check-input:checked').each(function () {
-                var values = $(this).val().split(","); // Séparez les valeurs par la virgule
+                var values = $(this).val().split(",");
                 for (var i = 0; i < values.length; i++) {
-                    var value = values[i].trim(); // Supprimez les espaces inutiles
+                    var value = values[i].trim(); 
                     var intValue = parseInt(value);
                     if (!isNaN(intValue) && !listChoices.includes(intValue)) {
                         listChoices.push(intValue)
