Fixed: save answer bdd OK

--- a/PIRESQuestions/PIRESQuestions/Views/Answer/Reply.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Answer/Reply.cshtml
@@ -1,7 +1,9 @@
 ﻿@model FormViewModel
 
-<form asp-action="Reply" asp-controller="Answer">
+<form asp-action="Reply" asp-controller="Answer" id="answersForm">
     <div class="form-groupe">
+        <label asp-for="@Model.Anonymous.Age">Veuillez rentrez votre âge :</label>
+        <input type="number" asp-for="@Model.Anonymous.Age" id="inputAge"/>
         @foreach (Question question in Model.Questions)
         {
             <input asp-for="@question.Id" />
@@ -21,3 +23,35 @@
     <button type="submit"class="btn btn-primary">Envoyer la réponse</button>
 </form>
 
+
+<script>
+    $(function () {
+        $('#answersForm').submit(function (e) {
+             var listAnswersPost= [];
+
+            $('fieldset').each(function () {
+                var questionId = $(this).find('input[type="radio"]').attr('name');
+                var selectedAnswerId = $(this).find('input[type="radio"]:checked').val();
+
+                if (selectedAnswerId) {
+                    var currentTime = new Date(); // Obtenir la date actuelle côté client
+                    var formattedTime = currentTime.toISOString(); // Formater la date au format ISO (AAAA-MM-JJTHH:MM:SS)
+
+                    listAnswersPost.push({ questionId: questionId, choiceId: selectedAnswerId, horodatage: formattedTime});
+                }
+            });
+            
+            var newAnonymous =
+            {
+                AnonymousId: 0,
+                Age: $('#inputAge').val(),
+            };
+            console.log("réponse : ", listAnswersPost + "anony : ", newAnonymous);
+
+            $.post('/Answer/Reply', { listAnswers: listAnswersPost, anonymous: newAnonymous }, function (data) {
+                
+            });
+            e.preventDefault();
+        });
+    });
+</script>
