fix: permet l'envoi des reponses

--- a/PIRESQuestions/PIRESQuestions/Views/Form/Detail.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Form/Detail.cshtml
@@ -35,6 +35,7 @@
 
             $.post('/Question/CreateQuestion', { question: question, choiceIds: listChoices }, function (data) {
                 $('#divContentForm').html(data);
+                location.reload();
             });
             e.preventDefault();
         });
