--- a/PIRESQuestions/PIRESQuestions/Views/Answer/Reply.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Answer/Reply.cshtml
@@ -14,7 +14,7 @@
                 <div class="card mb-5 col-md-8 mx-auto">
                     <div class="card-body">
                         <label asp-for="@Model.Anonymous.Age">Veuillez rentrez votre âge :</label>
-                        <input type="number" asp-for="@Model.Anonymous.Age" id="inputAge" />
+                        <input type="number" asp-for="@Model.Anonymous.Age" id="inputAge" required/>
                         <span asp-validation-for="@Model.Anonymous.Age" class="text-danger"></span>
                     </div>
                 </div>
@@ -23,7 +23,7 @@
                 {
                     <fieldset>
                         <div class="card mb-5 col-md-8 mx-auto">
-                            <input asp-for="@question.Id" type="hidden" />
+                            <input asp-for="@question.Id" type="hidden" required/>
 
                             <div class="card-header" style="background-color: #F4B164;">
                                 <legend>@question.Label</legend>
