--- a/PIRESQuestions/PIRESQuestions/Views/Shared/_Layout.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Shared/_Layout.cshtml
@@ -31,13 +31,16 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Dashboard" asp-action="Index" asp-route-userId="@TempData["UserId"]">Dashboard</a>
                             </li>
-                        }                    
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Question" asp-action="CreateQuestion">Créer Question</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Form" asp-action="Index">Form</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Form" asp-action="Index">Mes Formulaires</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Form" asp-action="IndexPublic">Formulaires</a>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
