fix: alerte si pas de réponse coché à une question lors de la création

--- a/PIRESQuestions/PIRESQuestions/Views/Form/Detail.cshtml
+++ b/PIRESQuestions/PIRESQuestions/Views/Form/Detail.cshtml
@@ -25,6 +25,12 @@
                     }
                 }
             });
+
+            if (listChoices.length === 0) {
+                alert("Veuillez sélectionner au moins un choix.");
+                hideShowAddQuestion();
+            }
+
             var question = {
                 Label: $('#inputLabel').val(),
                 Description: $('#inputDescription').val(),
